Tue Jun  9 10:58:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, win32/Makefile.sub (RMALL): need for distclean-rdoc.

Tue Jun  9 01:07:33 2009  Koichi Sasada  <ko1@atdot.net>

	* thread.c: rename functions which require a parameter
	  "rb_thread_t *", the prefix to be rb_threadptr_ instead of
	  rb_thread_.

	* thread.c (rb_thread_add_event_hook(), rb_thread_remove_event_hook):
	  change the parameter type from rb_thread_t * to VALUE.

	* eval.c, eval_error.c, eval_intern.h, signal.c, vm_core.h, vm_eval.c:
	  ditto.

	* include/ruby/intern.h: remove decl of rb_thread_signal_raise() and
	  rb_thread_signal_exit().

Mon Jun  8 05:07:41 2009  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (rb_thread_create_timer_thread): print fatal error
	  message to stderr instead of using rb_bug().

	* KNOWNBUGS.rb, bootstraptest/test_fork.rb: move a fixed test.

Sun Jun  7 22:44:20 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb (log): avoided redundant expression.

Sat Jun  6 02:49:05 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_reject_bang): always check frozen status.
	  [ruby-core:23715]

	* hash.c (rb_hash_update): ditto.

	* hash.c (rb_hash_reject_bang): call rb_hash_foreach() directly.

	* hash.c (rb_hash_update_i): call st_insert() directly.

	* hash.c (rb_hash_update_block_i): ditto.

Fri Jun  5 07:12:32 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/mkmf.rb (#link_command): should dup CONFTEST_C which is
	  frozen.  ref  [ruby-core:23675].  [ruby-core:23702]

Thu Jun  4 02:25:51 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/base64.rb: typo fixed.  a patch from okkez.   [ruby-dev:38564]

Wed Jun  3 09:03:23 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (enum_first): should check negative length.

Tue Jun  2 17:32:40 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (first_i): Enumerator#first should consume only what is